--- a/src/components/Chart/Chart.module.css
+++ b/src/components/Chart/Chart.module.css
@@ -3,12 +3,13 @@
     justify-content: center; */
     /* width: 40%; */
     /* height: 40% !important; */
-    width: 70%;
+    width: 100%;
     /* height: 505%; */
     /* background-image: url(../../images/download.jpg);
     object-fit: cover; */
     /* margin: auto;
     border: auto; */
+    overflow: scroll;
 }
 
 @media (max-width: 770px) {
